tests/cases/should_fail/literals/invalid_float_exponent.stderr
error: expected field name access or a method call
 --> $DIR/invalid_float_exponent.hash:1:12
1 |   k := 12e23.0;
  |              ^ here
